--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
-    font-size: 1rem;
+    font-size: 1.5rem;
+    background: -webkit-linear-gradient(rgb(209, 166, 67), rgb(43, 26, 0)); 
 }
 h1 {
     text-align: center;
     margin-bottom: 1.5rem;
     font-size: 4rem;
-    background: -webkit-linear-gradient(rgb(209, 166, 67), rgb(43, 26, 0));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-   
+}
+p {
+    text-align: justify;
 }
