--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-size: 1.5rem;
-    background: -webkit-linear-gradient(rgb(209, 166, 67), rgb(43, 26, 0)); 
+    background: -webkit-linear-gradient(rgb(209, 166, 67), rgb(190, 114, 0)); 
 }
 h1 {
     text-align: center;
@@ -9,4 +9,9 @@ h1 {
 }
 p {
     text-align: justify;
+}
+h3 {
+    text-align: center;
+    color: white;
+    font-size: 2.65rem;
 }
