--- a/style.css
+++ b/style.css
@@ -30,5 +30,23 @@ h3 {
 .text {
     display: none;
     margin-top: 10px;
+}
+.korok-btn:hover {
+    border: 5px solid red;
+    border-radius: 50%;
+}
+.video {
+    text-align: center;
+    margin-bottom: 100px;
+}
+#ajanlas {
+    text-align: center;
+    margin-bottom: 100px;
+}
+a {
+    text-decoration: none;
+    color: rgb(73, 62, 13);
+}
+.active {
+    display: block;
   }
-
