--- a/style.css
+++ b/style.css
@@ -26,14 +26,16 @@ h3 {
     padding: 15px;
     background: linear-gradient(yellow,red);
     margin-bottom: 10px;
+    /* opacity: 0.7; */
 }
 .text {
     display: none;
     margin-top: 10px;
 }
 .korok-btn:hover {
-    border: 5px solid red;
-    border-radius: 50%;
+    border: 5px solid rgb(0, 0, 0);
+    /* border-radius: 50%; */
+    /* opacity: 1; */
 }
 .video {
     text-align: center;
@@ -50,3 +52,7 @@ a {
 .active {
     display: block;
   }
+
+.okor{
+    scale: 80%;
+}
