--- a/kirandulas.css
+++ b/kirandulas.css
@@ -5,8 +5,9 @@ h2 {
     text-align: center;
 }
 .repjegy-kep {
-    max-width: 300px;
-    max-height: 500px;
+    max-width: 200px;
+    max-height: 400px;
+    float: right;
 }
 #indulas {
     color: rgb(255, 38, 0);
@@ -20,4 +21,7 @@ h2 {
 }
 .szallas-nev {
     font-size: 20px;
+}
+.container {
+    max-width: 1200px;
 }
