--- a/kirandulas.css
+++ b/kirandulas.css
@@ -5,9 +5,8 @@ h2 {
     text-align: center;
 }
 .repjegy-kep {
-    max-width: 200px;
-    max-height: 400px;
-    float: right;
+    max-width: 250px;
+    max-height: 500px;
 }
 #indulas {
     color: rgb(255, 38, 0);
@@ -23,5 +22,8 @@ h2 {
     font-size: 20px;
 }
 .container {
-    max-width: 1200px;
+    max-width: 1400px;
+}
+#szallas {
+    margin-left: 80px;
 }
