--- a/kirandulas.css
+++ b/kirandulas.css
@@ -22,3 +22,9 @@ body {
 .container {
     max-width: 1400px;
 }
+#szallas {
+    text-align: center;
+}
+.repjegy-div {
+    text-align: center;
+}
