--- a/kirandulas.css
+++ b/kirandulas.css
@@ -1,10 +1,11 @@
 body {
-    background-color: white;
+    background-color: rgb(255, 242, 217);
 }
 
 .repjegy-kep {
     max-width: 250px;
     max-height: 500px;
+    border: 3px solid rgb(73, 62, 13);
 }
 #indulas {
     color: rgb(255, 38, 0);
